# blizzbar

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  Blizzbar.sln  BlizzbarCommon.h  CMakeLists.txt  README.md  build.ps1  deploy.ps1  games.txt
Blizzbar/: AgentClient.cs  App.xaml  App.xaml.cs  Autostart.cs  Blizzbar.csproj  FatalException.cs  GameDetails.cs  GameInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeHelper.cs  NotifyIconForm.Designer.cs  NotifyIconForm.cs  NotifyIconForm.resx  Program.cs  ShellLink.cs  UpdateHandler.cs  app.manifest  packages.config
Blizzbar/Agent/: AgentRequestException.cs  Client.cs  Game.cs  GameDetails.cs
Blizzbar/Agent/Responses/: GameDetailsResponse.cs  GameLinkResponse.cs
Blizzbar/Interop/: HookInstaller.cs  HookManager.cs  HookType.cs  IPropertyStore.cs  SendMessageTimeoutFlags.cs  Strings.cs  UpdateHandler.cs  Win32.cs
Blizzbar/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
BlizzbarHelper/: BlizzbarHelper.cpp  BlizzbarHelper.vcxproj  BlizzbarHelper.vcxproj.filters  Handle.cpp  Handle.h  NotifyIcon.cpp  NotifyIcon.h  NotifyIconWindow.cpp  NotifyIconWindow.h  Resource.rc  Win32Exception.cpp  Win32Exception.h  WindowClass.cpp  WindowClass.h
BlizzbarHooks/: BlizzbarHooks.c  BlizzbarHooks.cpp  BlizzbarHooks.props  BlizzbarHooks.vcxproj  BlizzbarHooks.vcxproj.filters  BlizzbarHooks32.vcxproj  BlizzbarHooks32.vcxproj.filters  BlizzbarHooks64.vcxproj  BlizzbarHooks64.vcxproj.filters  Resource.rc
BlizzbarNativeHelper/: BlizzbarNativeHelper.vcxproj  BlizzbarNativeHelper.vcxproj.filters  Handle.cpp  Handle.h  Strings.h  UpdateHandler.cpp  UpdateHandler.h  Util.cpp  Util.h  Win32Exception.cpp  numeric_cast.h
BlizzbarSurrogate/: BlizzbarSurrogate.vcxproj  BlizzbarSurrogate.vcxproj.filters  RCa22328  Resource.rc  main.c  main.cpp  resource.h
blizzbar/: CMakeLists.txt
blizzbar-common/: CMakeLists.txt
blizzbar-common/include/: blizzbar_common.h
blizzbar-common/include/blizzbar/: common.h
blizzbar-common/res/: games.txt
blizzbar-hook/: CMakeLIsts.txt
blizzbar-hook/res/: resource.rc
blizzbar-hook/src/: ConfigHelpers.cpp  ConfigHelpers.h  ThreadLocal.h  blizzbar_hook.cpp
blizzbar/res/: blizzbar.exe.manifest  resource.h  resource.rc  strings.h
blizzbar/src/: Handle.cpp  Handle.h  NotifyIcon.cpp  NotifyIcon.h  NotifyIconWindow.cpp  NotifyIconWindow.h  Win32Exception.cpp  Win32Exception.h  WindowClass.cpp  WindowClass.h  handle.cpp  handle.h  main.cpp
